Style project overview, fix password input animation on iOS

--- a/src/styles/views/_project.scss
+++ b/src/styles/views/_project.scss
@@ -1,4 +1,4 @@
-.project-overview {
+.project-hero {
   @extend %font-sans-extended;
   text-align: center;
   display: flex;
@@ -116,6 +116,15 @@ html:not(.is-animating) .project-arrow {
   .project-arrow .tooltip {
     display: none;
   }
+}
+
+.project-overview {
+  @extend %font-sans-extended;
+  font-size: 0.85rem;
+  border-top: 1px solid $neutral-3;
+  border-bottom: 1px solid $neutral-3;
+  margin-bottom: 2rem;
+  padding: 1.5rem 0;
 }
 
 .project-role {
